grammar.js
    source: $ => seq(
      choice(
        $._dispatch,
        field("module", $.module)
      ),
    ),

    _dispatch: $ => choice(
      dispatch($, 'module', $.module),
      dispatch($, 'decl', $._decl),
      dispatch($, 'type', $._type),
      dispatch($, 'literal', $._literal),
      dispatch($, 'expression', $._expression),
      dispatch($, 'scope_declaration', $.scope_declaration),
      dispatch($, 'function_declaration', $.function_declaration),
      dispatch($, '_scoped_declaration', $._scoped_declaration),
    ),


    //**************************************************************************
    // COMMENTS
    //**************************************************************************

    module: $ => repeat1(seq(field("decl", $._decl), $.vsemi)),

    _decl: $ => choice(
      $.pragma,
      $.include,
      $.using,
      $.scope_declaration,
      $._scoped_declaration,
    ),


    scope_declaration: $ => seq(
      field("modifier", repeat($.modifier)),
      field("head", $.scope_head),
      field("modifier", optional(alias('interface', $.interface))),
      field("name", $.scope_name),
      optional($._implemented_interfaces),
      miss($, '=', "decls",
           maybe_block($, field("decl", $._decl))),
    ),

    _implemented_interfaces: $ =>
      miss($, ':', "interfaces", sep1(field("implements", $.qual_scope_name), ","))
    ,

    scope_head: $ => choice(
      'contract', 'namespace'
    ),


    function_declaration: $ => seq(
      field("modifiers", repeat(field("modifier", $.modifier))),
      field("head", $.function_head),
      maybe_block($, field("clause",
                     choice(
                       $.function_signature,
                       $.function_clause
                     )))
    ),

    function_clause: $ => seq(
      field("name", $.identifier),
      field("args", $.pat_args),
      field("ret_type", optional(seq(':', $._type))),
      field("body", $._function_body),
    ),

    _function_body: $ => choice(
      $.unguarded_body,
      $.guarded_bodies,
    ),

    unguarded_body: $ =>
    field_miss($, '=', "body", $._expression_body),

    function_head: $ => choice(
      'function',
      'entrypoint',
    ),

    type_param_decls: $ => parens_comma(
      $,
      field("name", $.type_param)
    ),

    type_param: $ => $.type_variable_poly_name,


    type_alias: $ => seq(
      'type',
      field("name", $.identifier),
      field("params", optional($.type_param_decls)),
      optional($._type_alias_body),
    ),

    _type_alias_body: $ => seq(
      '=',
      field("type", $._type)
    ),


    _expression_body: $ => choice(
      $.expr_block,
      $._expression,
    ),

    expr_block: $ => block($, field("stmt", $._expression)),


    /// Expressions that are not indented blocks
    _expression: $ => choice(
      $.expr_lambda,
      $.expr_if,
      $.expr_letval,
      $.expr_switch,
      $._expression_simple,
    ),

    /// Things that have unambiguous beginning and end
    expr_if: $ => prec.right(seq(
      'if',
      field_miss(
        $, parens($, field("cond", $._expression)),
        "then", $._expression_body),
      repeat(
        choice(
          $._inhibit_vsemi,
          $.expr_elif
        )
      ),
      optional($.expr_else),
    )),

    expr_else: $ => field_miss($, 'else', "then", $._expression_body),

    /// switch(x) y => y
    expr_variable: $ => $.qual_identifier,


    /// 1
    _pattern: $ => choice(
      $.pat_typed,
      $.pat_op,
      $.pat_application,
      $.pat_match,
      $.pat_map_or_record,
      $.pat_list,
      $.pat_tuple,
      $.pat_variable,
      $.pat_literal,
      $.pat_wildcard,
      alias($._lex_hole, $.pat_hole),
    ),


    /// x + y
    pat_args: $ => parens_comma(
      $,
      field("arg", $._pattern),
    ),


    _type: $ => choice(
      $.type_tuple,
      $.type_function,
      $._type_in_tuple,
    ),

    /// Tuple and function types are open and unprecedenced. This confuses the parses, thus we need
    /// to separate types that must not be tuple members without parens.
    type_application: $ => prec.left(seq(
      field("fun", $.type_variable),
      field("params", $.type_params),
    )),

    type_params: $ => choice(
      parens_comma($, field("param", $._type_param))
    ),

    _type_param: $ => choice(
      $.type_indexed,
      $._type,
    ),


    /// (int)
    type_variable_poly: $ => $.type_variable_poly_name,

    /// int
    name: $ => choice($._lex_low_id, $._lex_up_id),

    type_variable_poly_name: $ => $._lex_prim_id,

    identifier: $ => alias($._lex_low_id, $.identifier),

    scope_name: $ => alias($._lex_up_id, $.scope_name),

    qual_low_id: $ => seq(
      repeat(seq(field("path", $.scope_name), token.immediate('.'))),
      field("name", alias($._lex_low_id, $.name))
    ),

    vopen: $ => $._vopen,
    vsemi: $ => $._vsemi,
    vclose: $ => $._vclose,

    //**************************************************************************
    // LEXEMES
    //**************************************************************************

    _lex_low_id: $ => token(/([a-z_]|(_[a-zA-Z]))[a-zA-Z0-9_']*/),
    _lex_up_id: $ => token(/[A-Z][a-zA-Z0-9_']*/),

    _lex_prim_id: $ => token(/'*([a-z]|(_[a-zA-Z]))[a-zA-Z0-9_]*/),
